--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
     "type": "git",
     "url": "https://github.com/harvesthq/chosen"
   },
+  "main": "chosen/chosen.jquery.js",
   "engines": {
     "node": ">=0.4.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "jquery": ">1.3.0"
+  },
   "devDependencies": {
     "coffee-script": ">= 1.4",
     "uglify-js": ">= 1.2.5 <2.0"
+  },
+  "shim": {
+    "deps": ["jquery"],
+    "exports": "chosen"
   }
 }
